[package]
name = "scuttlebutt"
readme = "README.md"
description = "A library of useful multi-party computation utilities"
keywords = ["cryptography", "MPC", "secure-computation"]
categories = ["cryptography"]
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[features]
serde = []

[dependencies]
curve25519-dalek.workspace = true
rand.workspace = true
rand_core.workspace = true
rand_chacha.workspace = true
serde.workspace = true
sha2.workspace = true
subtle.workspace = true
generic-array.workspace = true
smallvec.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
vectoreyes.workspace = true
ndarray.workspace = true
num-traits.workspace = true
swanky-generic-array.workspace = true
swanky-serialization.workspace = true
swanky-field.workspace = true
swanky-field-f61p.workspace = true
swanky-field-binary.workspace = true
swanky-field-fft.workspace = true
swanky-field-ff-primes.workspace = true

[dev-dependencies]
criterion.workspace = true
hex.workspace = true
proptest.workspace = true
num-bigint.workspace = true
serde_json.workspace = true
bincode.workspace = true
serde = { workspace = true, features = ["derive"] }

[[bench]]
name = "aes128"
harness = false

[[bench]]
name = "aes256"
harness = false

[[bench]]
name = "block"
harness = false

[[bench]]
name = "block512"
harness = false

[[bench]]
name = "commitment"
harness = false

[[bench]]
name = "hash_aes"
harness = false

[[bench]]
name = "rand_aes"
harness = false
