[package]
name = "simple-arith-circuit"
version = "0.1.0"
authors = ["swanky authors <swanky@galois.com>"]
license = "MIT"
description = "Simple arithmetic circuit library"
categories = ["cryptography"]
edition = "2021"
publish = false

[features]
proptest = ["dep:proptest"]
serde = ["dep:serde", "scuttlebutt/serde"]

[dependencies]
scuttlebutt = { path = "../scuttlebutt" }
rand = "0.8.5"
serde = { version = "1.0.139", features = ["derive"], optional = true }
proptest = { version = "1.0.0", optional = true }
log = "0.4.17"

[dev-dependencies]
proptest = "1.0.0"
bincode = "1.3.3"

[[bench]]
name = "reader_scalability"
harness = false