[package]
name = "twopac"
version = "0.3.0"
authors = ["Alex J. Malozemoff <amaloz@galois.com>"]
license = "MIT"
readme = "README.md"
description = "A library for secure two-party computation"
categories = ["cryptography"]
keywords = ["cryptography", "secure-computation", "2PC"]
edition = "2018"
publish = false

[lib]

[features]
nightly = ["rand/nightly", "scuttlebutt/nightly", "ocelot/nightly", "fancy-garbling/nightly"]
unstable = []

[dependencies]
fancy-garbling = { path = "../fancy-garbling" }
ocelot         = { path = "../ocelot"         }
scuttlebutt    = { path = "../scuttlebutt"    }
rand           = "0.6"

[dev-dependencies]
criterion = "0.2"
itertools = "0.8"



[[bench]]
name = "semihonest"
harness = false
