[package]
name = "vectoreyes"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
num-traits.workspace = true
bytemuck.workspace = true
subtle.workspace = true

# NOTE: keep in sync with the cfg for the scalar backend in generated/implementation.rs
[target.'cfg(not(all(target_arch = "x86_64",all(target_feature = "sse2",target_feature = "avx",target_feature = "sse4.1",target_feature = "avx2",target_feature = "aes",target_feature="sse4.2",target_feature="PCLMULQDQ"))))'.dependencies]
aes.workspace = true
lazy_static.workspace = true

[dev-dependencies]
aes.workspace = true
proptest.workspace = true
lazy_static.workspace = true
