[package]
name = "swanky-channel"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
swanky-serialization.workspace = true
eyre.workspace = true
generic-array.workspace = true

[dev-dependencies]
proptest.workspace = true
