[package]
name = "swanky-field-binary"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
swanky-serialization.workspace = true
swanky-field.workspace = true
vectoreyes.workspace = true
subtle.workspace = true
generic-array.workspace = true
rand.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
crypto-bigint.workspace = true

[dev-dependencies]
swanky-field-test.workspace = true
proptest.workspace = true
