[package]
name = "swanky-field-f61p"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
rand.workspace = true
swanky-serialization.workspace = true
swanky-field.workspace = true
subtle.workspace = true
generic-array.workspace = true
crypto-bigint.workspace = true
bytemuck.workspace = true

[dev-dependencies]
swanky-field-test.workspace = true
proptest.workspace = true

