[package]
name = "swanky-field-test"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
swanky-field.workspace = true
swanky-serialization.workspace = true
proptest.workspace = true
generic-array.workspace = true
crypto-bigint.workspace = true

