[package]
name = "swanky-field"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
rand.workspace = true
generic-array.workspace = true
subtle.workspace = true
num-traits.workspace = true
crypto-bigint.workspace = true

swanky-generic-array.workspace = true
swanky-serialization.workspace = true
