[package]
name = "swanky-flatbuffer-build"
description = "Tooling to automate compiling flatbuffer schemas"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
blake3.workspace = true
tempfile.workspace = true
