[package]
name = "swanky-party"
description = "Support for types indexed by a party."
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bytemuck = { workspace = true, features = ["derive"] }
