[package]
name = "swanky-serialization"
description = "Traits and utilities for compact serialization into a canonical byte representation"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
# serde, itself, is a small crate. We just don't want to require the derive feature.
serde.workspace = true
generic-array.workspace = true
vectoreyes.workspace = true
bytemuck.workspace = true
