[package]
name = "fancy-garbling-base-conversion"
description = "Lookup tables useful for the fancy-garbling crate"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]

[build-dependencies]
cc.workspace = true

