[package]
name = "mac-n-cheese-compiler"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
mac-n-cheese-ir.workspace = true
mac-n-cheese-party.workspace = true
mac-n-cheese-sieve-parser.workspace = true
scuttlebutt.workspace = true
vectoreyes.workspace = true
color-eyre.workspace = true
eyre.workspace = true
rand.workspace = true
rustc-hash.workspace = true
crossbeam.workspace = true
num_cpus.workspace = true
mimalloc = { workspace = true, default-features = false }
clap = { workspace = true, features = ["derive"] }
bumpalo.workspace = true
lazy_static.workspace = true
arrayvec.workspace = true
mac-n-cheese-wire-map.workspace = true
flume.workspace = true
bitvec.workspace = true
crypto-bigint.workspace = true
dhat.workspace = true
smallvec.workspace = true

[dev-dependencies]
proptest.workspace = true
