[package]
name = "mac-n-cheese-ir"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
scuttlebutt.workspace = true
ocelot.workspace = true
vectoreyes.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
rustc-hash.workspace = true
subtle.workspace = true
smallvec = { workspace = true, features = ["serde"] }
generic-array.workspace = true
eyre.workspace = true
flatbuffers.workspace = true
lz4.workspace = true
rand.workspace = true
twox-hash.workspace = true
bumpalo = { workspace = true, features = ["collections"] }
arrayvec.workspace = true
mac-n-cheese-vole.workspace = true

[build-dependencies]
swanky-flatbuffer-build.workspace = true

[dev-dependencies]
proptest.workspace = true
color-eyre.workspace = true
tempfile.workspace = true

